--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                                                 <tr
                                                                     v-for="line of getLineasPedidosDescarga(descarga.descarga) ">
                                                                     <th scope="col">
-                                                                        <button title="Crear paleta" type="button"
+                                                                        <a title="Crear paleta" type="button" href="identifica_paleta.html"
                                                                             class="btn btn-outline-warning"><svg
                                                                                 xmlns="http://www.w3.org/2000/svg"
                                                                                 width="32" height="32"
@@ -291,7 +291,7 @@
                                                                                 <path
                                                                                     d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
                                                                             </svg>
-                                                                        </button>
+                                                                        </a>
                                                                         {{line.descarga}}-{{line.pedido}}-{{line.articulo}}
                                                                     </th>
                                                                     <th scope="col">{{line.varlog}}</th>
@@ -425,7 +425,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="row m-1 mt-3">
+                                    <div class="row m-1 mt-4">
                                         <ul class="nav nav-tabs">
                                             <li class="nav-item">
                                                 <a class="nav-link active" data-bs-toggle="tab" href="#palletData">Datos
@@ -475,7 +475,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="row">
+                                                <div class="row mt-4">
                                                     <div class="col">
                                                         <div class="row">
                                                             <div class="col">
@@ -549,7 +549,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col bg-secondary">
+                                                    <div class="col bg-secondary border border-primary rounded">
                                                         <div class="row">
                                                             <div class="col">
                                                                 <div class="form-group">
