--- a/index.html
+++ b/index.html
@@ -223,13 +223,8 @@
                                                         </div>
                                                     </div>
                                                 </div>
-
                                             </div>
                                         </div>
-
-
-
-
                                     </div>
 
                                     <div v-if="descargasActivas.length>0">
@@ -281,7 +276,8 @@
                                                                 <tr
                                                                     v-for="line of getLineasPedidosDescarga(descarga.descarga) ">
                                                                     <th scope="col">
-                                                                        <a title="Crear paleta" type="button" href="identifica_paleta.html"
+                                                                        <a title="Crear paleta" type="button"
+                                                                            href="identifica_paleta.html"
                                                                             class="btn btn-outline-warning"><svg
                                                                                 xmlns="http://www.w3.org/2000/svg"
                                                                                 width="32" height="32"
@@ -574,7 +570,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        
+
                                                         <div class="row">
 
                                                             <div class="col">
@@ -582,7 +578,7 @@
                                                                     <div class="form-group">
                                                                         <label for="exampleInputEmail1"
                                                                             class="form-label mt-4">PESO BRUTO</label>
-                                                                        <div class="row">                                                                            
+                                                                        <div class="row">
                                                                             <div class="col-1">
                                                                                 <div class="form-check ">
                                                                                     <input
