--- a/identifica_paleta.html
+++ b/identifica_paleta.html
@@ -66,13 +66,13 @@
                                     <div class="sticky-top">
                                         <h4 class="mt-2">Detalle de la paleta</h4>
                                         <h4 class="mt-3">MUELLE</h4>
-                                        <h5>12</h5>
+                                        <h5>{{paleta.descarga.muelle}}</h5>
                                         <h4 class="mt-3">DESCARGA</h4>
-                                        <h5>descarga1</h5>
+                                        <h5>{{paleta.descarga.codigoDescarga}}</h5>
                                         <h4 class="mt-3">MATRICULA</h4>
-                                        <h5>444456k</h5>
+                                        <h5>{{paleta.descarga.matricula}}</h5>
                                         <h4 class="mt-3">PROVEEDOR</h4>
-                                        <h5>Coca-cola, sl</h5>
+                                        <h5>{{paleta.descarga.nombreProveedor}}</h5>
 
                                     </div>
 
@@ -83,7 +83,9 @@
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1" class="form-label mt-4">EAN 13</label>
                                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                                    aria-describedby="emailHelp" placeholder="" readonly>
+                                                    aria-describedby="emailHelp" placeholder="" 
+                                                    v-model="paleta.articulo.ean13"
+                                                    readonly>
 
                                             </div>
                                         </div>
@@ -91,7 +93,9 @@
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1" class="form-label mt-4">PALETA</label>
                                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                                    aria-describedby="emailHelp" placeholder="" readonly>
+                                                    aria-describedby="emailHelp" placeholder="" 
+                                                    v-model="paleta.codigoPaleta"
+                                                    readonly>
 
                                             </div>
                                         </div>
@@ -99,7 +103,9 @@
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1" class="form-label mt-4">CODIGO</label>
                                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                                    aria-describedby="emailHelp" placeholder="" readonly>
+                                                    aria-describedby="emailHelp" placeholder="" 
+                                                    v-model="paleta.articulo.codigo"
+                                                    readonly>
 
                                             </div>
                                         </div>
@@ -107,7 +113,10 @@
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1" class="form-label mt-4">VL</label>
                                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                                    aria-describedby="emailHelp" placeholder="" readonly>
+                                                    aria-describedby="emailHelp" 
+                                                    placeholder="" 
+                                                    v-model="paleta.articulo.varlog"
+                                                    readonly>
 
                                             </div>
                                         </div>
@@ -116,7 +125,9 @@
                                                 <label for="exampleInputEmail1"
                                                     class="form-label mt-4">DENOMINACIÓN</label>
                                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                                    aria-describedby="emailHelp" placeholder="" readonly>
+                                                    aria-describedby="emailHelp" placeholder="" 
+                                                    v-model="paleta.articulo.descripcion"
+                                                    readonly>
                                             </div>
                                         </div>
                                     </div>
@@ -148,7 +159,7 @@
                                                                 class="form-label mt-4">LOTE</label>
                                                             <input type="email" class="form-control"
                                                                 id="exampleInputEmail1" aria-describedby="emailHelp"
-                                                                placeholder="" readonly>
+                                                                placeholder="" v-model="paleta.lote">
                                                         </div>
                                                     </div>
                                                     <div class="col">
@@ -157,7 +168,8 @@
                                                                 class="form-label mt-4">PEDIDO</label>
                                                             <input type="email" class="form-control"
                                                                 id="exampleInputEmail1" aria-describedby="emailHelp"
-                                                                placeholder="" readonly>
+                                                                placeholder="" v-model="paleta.descarga.pedido"
+                                                                readonly>
                                                         </div>
                                                     </div>
                                                     <div class="col">
@@ -166,7 +178,7 @@
                                                                 class="form-label mt-4">FECHA DE CADUCIDAD</label>
                                                             <input type="date" class="form-control"
                                                                 id="exampleInputEmail1" aria-describedby="emailHelp"
-                                                                placeholder="" readonly>
+                                                                placeholder="" v-model="paleta.fechaCaducidad">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -181,6 +193,7 @@
                                                                     <input type="email" class="form-control"
                                                                         id="exampleInputEmail1"
                                                                         aria-describedby="emailHelp" placeholder=""
+                                                                        v-model="paleta.articulo.formato"
                                                                         readonly>
                                                                 </div>
                                                             </div>
@@ -191,6 +204,7 @@
                                                                     <input type="email" class="form-control"
                                                                         id="exampleInputEmail1"
                                                                         aria-describedby="emailHelp" placeholder=""
+                                                                        v-model="paleta.articulo.cajasXpaleta"
                                                                         readonly>
                                                                 </div>
                                                             </div>
@@ -203,6 +217,7 @@
                                                                     <input type="email" class="form-control"
                                                                         id="exampleInputEmail1"
                                                                         aria-describedby="emailHelp" placeholder=""
+                                                                        v-model="paleta.articulo.unidadesXcaja"
                                                                         readonly>
                                                                 </div>
                                                             </div>
@@ -213,6 +228,7 @@
                                                                     <input type="email" class="form-control"
                                                                         id="exampleInputEmail1"
                                                                         aria-describedby="emailHelp" placeholder=""
+                                                                        v-model="paleta.articulo.unidadesXretractil"
                                                                         readonly>
                                                                 </div>
                                                             </div>
@@ -230,6 +246,7 @@
                                                                     <input type="email" class="form-control"
                                                                         id="exampleInputEmail1"
                                                                         aria-describedby="emailHelp" placeholder=""
+                                                                        v-model="paleta.articulo.tipoPaleta"
                                                                         readonly>
                                                                 </div>
                                                             </div>
@@ -240,6 +257,7 @@
                                                                     <input type="email" class="form-control"
                                                                         id="exampleInputEmail1"
                                                                         aria-describedby="emailHelp" placeholder=""
+                                                                        v-model="paleta.articulo.tipoCaja"
                                                                         readonly>
                                                                 </div>
                                                             </div>
@@ -254,18 +272,21 @@
                                                                     <input type="email" class="form-control"
                                                                         id="exampleInputEmail1"
                                                                         aria-describedby="emailHelp" placeholder=""
-                                                                        readonly>
+                                                                        v-model="paleta.cantidadRecepcionada"
+                                                                        >
                                                                 </div>
                                                             </div>
                                                             <div class="col">
                                                                 <div class="form-group">
                                                                     <label for="exampleSelect1"
-                                                                        class="form-label mt-4">FORMATO VENTA</label>
-                                                                    <select class="form-select" id="exampleSelect1">
-                                                                        <option value="U">UNIDADES</option>
-                                                                        <option value="C" selected>CAJA</option>
-                                                                        <option value="P">PESO</option>
-                                                                        <option value="R">RETRACTIL</option>
+                                                                        class="form-label mt-4">FORMATO</label>
+                                                                    <select class="form-select" id="exampleSelect1"
+                                                                    v-model="paleta.formato"
+                                                                    >
+                                                                        <option value="UNIDADES">UNIDADES</option>
+                                                                        <option value="CAJA" selected>CAJA</option>
+                                                                        <option value="PESO">PESO</option>
+                                                                        <option value="RETRACTIL">RETRACTIL</option>
                                                                     </select>
                                                                 </div>
                                                             </div>
@@ -292,7 +313,8 @@
                                                                                 <input type="email" class="form-control"
                                                                                     id="exampleInputEmail1"
                                                                                     aria-describedby="emailHelp"
-                                                                                    placeholder="" readonly>
+                                                                                    v-model="paleta.pesoBruto"
+                                                                                    placeholder="">
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -318,7 +340,8 @@
                                                                                 <input type="email" class="form-control"
                                                                                     id="exampleInputEmail1"
                                                                                     aria-describedby="emailHelp"
-                                                                                    placeholder="" readonly>
+                                                                                    v-model="paleta.pesoNeto"
+                                                                                    placeholder="">
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -389,22 +412,45 @@
                 el: '#app',
                 data: {
                     pantalla_actual: 'identifica_paleta',
-                    mensaje_error: 'hola nano',
+                    mensaje_error: '',
                     usuario: 'juanra',
                     password: '',
-                    listado_almacenes: [
-                        {
-                            nombre: 'Villadangos Frio',
-                            codigo: 'A1012'
-                        },
-                        {
-                            nombre: 'Ribarroja Congelado',
-                            codigo: 'A1001'
-                        },
-                    ],
                     almacen: {
                         nombre: 'Villadangos Frio',
                         codigo: 'A1012'
+                    },
+                    paleta: {
+                        descarga: {
+                            muelle: 15,
+                            codigoDescarga: '12345DES',
+                            matricula: '1234HPW',
+                            codigoProveedor: '1000',
+                            nombreProveedor: 'Coca cola, S.A',
+                            pedido: 'T0001',
+                        },
+                        articulo: {
+                            codigo: '00016',
+                            varlog: '0',
+                            descripcion: 'Coca Cola 1 Litro',
+                            formato: 'C01',
+                            cajasXpaleta: 15,
+                            unidadesXcaja: 8,
+                            unidadesXretractil: null,
+                            tipoCaja: 'CAJA1',
+                            tipoPaleta: 'PALETA1',
+                            ean13: '1234567890123'
+                        },
+                        lote: 'lote1',
+                        fechaCaducidad: '2022-08-15',
+                        codigoPaleta: '600000890',
+                        unidadesXpaleta: 120,
+                        formato: 'CAJA',
+                        pesoNeto: 100000,
+                        pesoBruto: 110000,
+                        cantidadRecepcionada: 15,
+
+
+
                     },
 
                 },
